crates/edgezero-macros/tests/ui/non_secret_with_serde_flatten.stderr
error: `#[serde(flatten)]` is not allowed on fields of an `AppConfig`-derived struct (it would desync the canonical-form rules in 4.2 from the serde JSON shape). If you need a flat layout, define it explicitly.
 --> tests/ui/non_secret_with_serde_flatten.rs:9:5
  |
9 |     #[serde(flatten)]
  |     ^^^^^^^^^^^^^^^^^
